# Customer_Churn_Prediction

./: Customer_Churn.ipynb  README.md  pyproject.toml  requirement.txt
app/: main.py  preprocessing.py  schemas.py
models/: feature_columns_v1.pkl  model_xgb_v1.pkl  scaler_v1.pkl
notebook/: notebook.ipynb
